# library_management_api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: cfdaa7a60c5d_create_books_table.py
app/: database.py  exceptions.py  main.py
app/models/: __init__.py
app/routes/: books.py
app/schemas/: book.py
app/services/: book_service.py
seeds/: dataset.sql  seed.py
tests/: helpers.py  test_book_service.py  test_create_book.py  test_delete_book.py  test_read_books.py  test_search_books.py  test_update_books.py
