[project]
name = "library-management-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0.50",
    "alembic>=1.18.4",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28",
    "pytest-cov>=6",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4",
    "safety>=3",
    "bandit>=1.7",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true
mypy_path = "."

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = [".venv", "tests"]
